--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "homepage": "https://varwishteam.github.io/varwish-fe/",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-i18next": "^10.6.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
